Added example image

--- a/client/templates/views/search.html
+++ b/client/templates/views/search.html
@@ -24,7 +24,7 @@
 				<td>{{room}} - {{hub}}</td>
 				<td>{{group}}</td>
 				<td>{{project}}</td>
-				<td><a href='http://yourehired.group.shef.ac.uk/projects.html#Project{{projNum}}' target='_blank'><span class="glyphicon glyphicon-asterisk"></span></a></td>
+				<td><a href='http://yourehired.group.shef.ac.uk/projects.html#Project{{projNum}}' target='_blank'>Project #{{projNum}} info</span></a></td>
 			</tr>
 			{{/with}}
 		</tbody>
