--- a/client/templates/views/search.html
+++ b/client/templates/views/search.html
@@ -1,60 +1,11 @@
 <template name="search">
-	<h2>My info</h2>
 	{{#unless isCurrentStudent}}
 		Hi there - you're logged in as {{userEmail}}, which is not  the list of EYH students. Maybe you're Sheffield staff? Either way, data for crwinward1@sheffield.ac.uk (Topher Winward) will be displayed instead. Have a great day!<br><br>
 	{{/unless}}
-	<table class="table table-striped table-bordered">
-		<thead>
-			<tr style="background-color: #eee">
-				<th>Name</span></th>
-				<th>Email</span></th>
-				<th>Building</th>
-				<th>Room / Hub</th>
-				<th>Group</th>
-				<th>Project</th>
-				<th>Info</th>
-			</tr>
-		</thead>
-		<tbody>
-			{{#with currentRecord}}
-			<tr>
-				<td>{{name}}</td>
-				<td>{{email}}</td>
-				<td><a href="{{buildingMap}}" target="_blank">{{building}}</a></td>
-				<td>{{room}} - {{hub}}</td>
-				<td>{{group}}</td>
-				<td>{{project}}</td>
-				<td><a href='http://yourehired.group.shef.ac.uk/projects.html#Project{{projNum}}' target='_blank'>Project #{{projNum}} info</span></a></td>
-			</tr>
-			{{/with}}
-		</tbody>
-	</table>			
 
-	<h2>My hub</h2>
-	<p>
-		Click on Department, Name, Email or Group to sort.<br>
-	</p>
+	{{> my_info}}
 
-	<table class="table table-striped table-bordered">
-		<thead>
-			<tr style="background-color: #eee">
-				<th id="th-department"><a href='#'>Department</a></th>
-				<th id="th-name"><a href='#'>Name</a></th>
-				<th></th>
-				<th id="th-email"><a href='#'>Email</a></th>
-				<th id="th-group"><a href='#'>Group</a></th>
-			</tr>
-		</thead>
-		<tbody>
-		{{#each searchItems}}
-			<tr>
-				<td>{{department}}</td>
-				<td>{{name}}</td>
-				<td><a href="https://www.facebook.com/search/more/?q={{name}}" target="_blank"><img src="/img/fb.png" alt="Find on Facebook!" style="width: 24px;"></a></td>
-				<td><a href='mailto:{{email}}'>{{email}}</a></td>
-				<td>{{group}}</td>
-			</tr>
-		{{/each}}
-		</tbody>
-	</table>
+	{{> my_group}}
+
+	{{> my_hub}}
 </template>
