Updated chat style
*Added some basic admin capabilities (forcing a hub or project)
*Made chat show 100 messages, with a scroll bar
*Admins now see IDs by names

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -13,3 +13,9 @@
 	background-attachment: fixed;
 	background-position: 0px -240px;
 }
+
+.div-chat {
+	max-height: 400px;
+	overflow: auto;
+	border-bottom: 1px solid #ddd;
+}
