Soaked up some null references with ?.

--- a/client/templates/views/layout.html
+++ b/client/templates/views/layout.html
@@ -13,7 +13,7 @@
 			{{#if currentUser}}
 				{{yield}}
 			{{else}}
-				You are not logged in! Please sign into your Sheffield email account.
+				You are not logged in! Please sign into your Sheffield email account. If you don't have one and are here to look around, why not check out the <a href="http://winwardo.co.uk/mini/eyh/">small write up</a> showing some images of what this app does?
 				<br>
 			{{/if}}
 		</div>
